force-app/main/default/objects/ClassesRS__c/ClassesRS__c.object-meta.xml
<CustomObject>
    <description>Object to hold class records
RS
Alphaforce Team</description>
    <label>Classes</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Classes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>