force-app/main/default/objects/ClassesRS__c/fields/FeeRS__c.field-meta.xml
<CustomField>
    <fullName>FeeRS__c</fullName>
    <formula>CASE ( GroupingRS__c, &quot;2s&quot;, 7500,
&quot;3s&quot;, 5250,
&quot;4s&quot;, 3750,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>