force-app/main/default/objects/ClassesRS__c/fields/GroupingRS__c.field-meta.xml
<CustomField>
    <fullName>GroupingRS__c</fullName>
    <description>Class age</description>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2s</fullName>
            </value>
            <value>
                <fullName>3s</fullName>
            </value>
            <value>
                <fullName>4s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>