force-app/main/default/objects/ClassesRS__c/fields/SizeRS__c.field-meta.xml
<CustomField>
    <fullName>SizeRS__c</fullName>
    <label>Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>